--- a/GoalsApp/Gemfile
+++ b/GoalsApp/Gemfile
@@ -26,6 +26,21 @@ gem 'sdoc', '~> 0.4.0',          group: :doc
 # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
 gem 'spring',        group: :development
 
+group :development do
+  gem 'pry-rails'
+  gem 'better_errors', '1.1.0'
+  gem 'binding_of_caller'  
+end
+
+group :development, :test do
+  gem 'rspec-rails'
+end
+
+group :test do
+  gem 'guard-rspec'
+  gem 'capybara'
+end
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
