--- a/GoalsApp/Gemfile
+++ b/GoalsApp/Gemfile
@@ -39,10 +39,11 @@ end
 group :test do
   gem 'guard-rspec'
   gem 'capybara'
+  gem 'launchy'
 end
 
 # Use ActiveModel has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
+gem 'bcrypt-ruby', require: 'bcrypt'
 
 # Use unicorn as the app server
 # gem 'unicorn'
